# bdengine-app

./: .gitignore  README.md
installer/: bdengine.iss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
