[package]
name = "bdengine_app"
version = "0.1.0"
description = "Windows desktop shell for https://bdengine.app"
authors = ["BDEngine"]
license = "UNLICENSED"
repository = "https://bdengine.app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bdengine_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["devtools", "image-png"] }
tauri-plugin-single-instance = "2"
url = "2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole"
] }
